# KimikoLatent

./: .gitignore  README.md  autoencoder_kl.py  pyproject.toml  requirements.txt  test_inference_vae.py  test_train_vae.py  test_train_vae_approx.py  test_validate_vae.py  vae.py
src/hakulatent/: logging.py
src/hakulatent/extune/: __init__.py  linear.py
src/hakulatent/losses/: __init__.py  adversarial.py  perceptual.py  vf_loss.py  vq_loss.py  wavelet_loss.py
src/hakulatent/models/: README.md  __init__.py  approx.py  discriminator.py
src/hakulatent/trainer/: __init__.py  trainer.py
src/hakulatent/transform/: README.md  __init__.py  base.py  feature.py  spatial.py
src/hakulatent/utils/: config.py  latent.py  model_patch.py
src/hakulatent/vq/: kepler.py
src/hl_dataset/: imagenet.py
